<resources>
    <!-- Application Context -->
    <string name="app_name">Mobile Salesman</string>
    <string name="retrieve_data_title">Ambil Data</string>
    <string name="transaction_title">Transaksi</string>
    <string name="order_title">Order</string>
    <string name="retur_title">Retur</string>
    <string name="settlement_title">Pelunasan</string>
    <string name="view_outlet_title">Pilih Outlet</string>
    <string name="view_stock_title">Pilih Stock</string>
    <string name="view_billing_title">Pilih Pelunasan</string>
    <string name="view_edit_stock_title">Edit Stok</string>
    <string name="view_edit_settlement_title">Edit Pelunasan</string>

    <string name="pop_up_order_edit">EDIT ORDER</string>
    <string name="pop_up_retur_edit">EDIT RETUR</string>
    <string name="pop_up_settlement_edit">EDIT PELUNASAN</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="action_refresh_user">Refresh User</string>
    <string name="action_show_stock">Lihat Stock</string>
    <string name="action_delete_stock">Delete</string>
    <string name="action_edit_stock">Edit</string>
    <string name="action_show_billing">Lihat Invoice</string>
    <string name="action_sent_current_data">Kirim</string>
    <string name="action_ok">Ok</string>
    <string name="action_yes">Ya</string>
    <string name="action_no">Tidak</string>

    <string name="btn_retrieve_data">Ambil Data</string>
    <string name="btn_transaction">Transaksi</string>
    <string name="btn_sent_data">Kirim Data</string>
    <string name="btn_kembali">Kembali</string>
    <string name="btn_exit">Keluar</string>
    <string name="btn_batal">Batal</string>
    <string name="btn_proses">Proses</string>
    <string name="btn_retur">Retur</string>
    <string name="btn_login">Login</string>
    <string name="btn_summary">Summary</string>
    <string name="hint_kode">Kode</string>
    <string name="hint_nama_barang">Nama Brg</string>
    <string name="hint_kode_nama_barang">Kode Nama Brg</string>
    <string name="hint_harga">Harga</string>
    <string name="hint_qty">Qty</string>
    <string name="hint_unit">Unit</string>
    <string name="hint_qty_unit">Qty / Unit</string>
    <string name="hint_subtotal">Subtotal</string>
    <string name="transaksi_order">Order Penjualan :</string>
    <string name="transaksi_retur">Retur :</string>
    <string name="transaksi_pelunasan">Pelunasan :</string>
    <string name="hint_invoice_number">Nomor Invoice</string>
    <string name="hint_invoice_date">Tanggal Invoice</string>
    <string name="hint_credit">Credit</string>
    <string name="hint_payment_method">Metode Permbayaran</string>
    <string name="hint_nominal_payment">Nominal</string>
    <string name="hint_search_outlet">Cari Outlet..</string>
    <string name="hint_search_stock">Cari Stock..</string>
    <string name="hint_search_billing">Cari Billing..</string>
    <string name="invoice_no">Invoice</string>
    <string name="currency_symbol">Rp</string>

    <string name="team_prompt">Pilih Team</string>
    <string name="download_success">File download successfully!</string>
    <string name="download_failed">FAILED downloading file!</string>
    <string name="upload_success">File Berhasil di unggah!</string>
    <string name="upload_failed">Gagal mengunggah file!</string>
    <string name="file_downloading">File downloading ...</string>
    <string name="file_uploading">File uploading ...</string>
    <string name="file_setup">File Setup</string>
    <string name="failed_login">Failed to login. Please make sure User Id and Password are valid.</string>
    <string name="code_not_found">Kode Barang tidak di temukan.</string>
    <string name="delete_stock_confirm">Anda yakin ingin menghapus stok yg tercentang?</string>
    <string name="delete_settlement_confirm">Anda yakin ingin menghapus pelunasan yg tercentang?</string>
    <string name="invoice_no_not_found">Nomor Invoice tidak di temukan.</string>

    <!-- Style -->
    <style name="PopupEditText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#000000</item>
        <item name="android:gravity">left</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">left</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="ButtonTextCenter">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>


    <!-- Below is the dummy string values -->
    <string-array name="unit_arrays">
        <item>Dus</item>
        <item>Pcs</item>
    </string-array>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>
