<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayoutAction"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRowAction1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/order_code"
                android:layout_weight="20"
                android:hint="@string/hint_kode"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/order_name"
                android:layout_weight="20"
                android:hint="@string/hint_nama_barang"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/order_price"
                android:layout_weight="20"
                android:hint="@string/hint_harga"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/order_qty"
                android:layout_weight="20"
                android:hint="@string/hint_qty"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/order_unit"
                android:layout_weight="10"
                android:hint="@string/hint_unit"/>

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="10"
                style="@style/ButtonTextCenter"
                android:text="+"
                android:background="@drawable/button_shape"/>

        </TableRow>
    </TableLayout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayoutData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow android:id="@+id/tableRowData1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_kode_nama_barang"
                    android:id="@+id/textView_head_kode"
                    android:layout_weight="40"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_harga"
                    android:id="@+id/textView_head_price"
                    android:layout_weight="20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_qty_unit"
                    android:id="@+id/textView_head_qty_unit"
                    android:layout_weight="20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_subtotal"
                    android:id="@+id/textView_head_subtotal"
                    android:layout_weight="20"/>

            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_batal"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            style="@style/ButtonTextCenter"
            android:text="@string/btn_batal"
            android:background="@drawable/button_shape_red"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_proses"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            style="@style/ButtonTextCenter"
            android:text="@string/btn_proses"
            android:background="@drawable/button_shape_blue"/>

    </LinearLayout>

</LinearLayout>
