<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OrderPenjualanActivity">

    <group
        android:id="@+id/menu_group_edit"
        android:visible="false">
        <item
            android:id="@+id/action_edit_stock"
            android:icon="@drawable/ic_edit"
            android:orderInCategory="100"
            android:title="@string/action_edit_stock"
            app:showAsAction="always" />
    </group>

    <group
        android:id="@+id/menu_group_delete"
        android:visible="false">
        <item
            android:id="@+id/action_delete_stock"
            android:icon="@drawable/ic_delete"
            android:orderInCategory="200"
            android:title="@string/action_delete_stock"
            app:showAsAction="always" />
    </group>

    <item
        android:id="@+id/action_show_stock"
        android:icon="@drawable/ic_search_order"
        android:orderInCategory="300"
        android:title="@string/action_show_stock"
        app:showAsAction="ifRoom" />
</menu>
