<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayoutData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/tableRowData1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_head_invoice_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:text="@string/hint_invoice_number"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_head_invoice_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/hint_invoice_date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_head_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/hint_credit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView_head_payment_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/hint_payment_method"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView_head_nominal_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/hint_nominal_payment"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>