<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayoutData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow android:id="@+id/tableRowData1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_kode_nama_barang"
                    android:id="@+id/textView_head_kode"
                    android:layout_weight="40"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_harga"
                    android:id="@+id/textView_head_price"
                    android:layout_weight="20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_qty_unit"
                    android:id="@+id/textView_head_qty_unit"
                    android:layout_weight="20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_subtotal"
                    android:id="@+id/textView_head_subtotal"
                    android:layout_weight="20"/>

            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>