<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_kode"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/retur_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_nama_barang"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/retur_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_harga"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/retur_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:inputType="numberSigned"
                android:maxLength="9"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_qty"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/retur_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxLength="9"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_unit"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/unit_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/unit_arrays"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_blue"
            android:text="Save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>