<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_invoice_number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/invoice_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_invoice_date"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/invoice_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_credit"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settlement_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxLength="9"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_payment_method"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="9"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_nominal_payment"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nominal_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxLength="9"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_blue"
            android:text="Save"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Dialogs -->
    <DatePicker
        android:id="@+id/dp_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>